maybe fixed off centerdness?

--- a/style.css
+++ b/style.css
@@ -265,13 +265,12 @@
 
  .name img {
     float: left;
-    marging-left: 30px;
+    margin-right: 15px;
  }
 
  .portrait img {
     float: right;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 15px;
  }
  
  .author__elsewhere {
